syntax = "proto3";
package goon_types;

message RizzPing {}

message GoonPong {}
